crates/pg_syntax/tests/snapshots/postgres_regress/tidrangescan@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE tidrangescan(id integer, data text);"
---
CreateStmt@0..49
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "tidrangescan"
  Ascii40@25..26 "("
  ColumnDef@26..36
    Ident@26..28 "id"
    Whitespace@28..29 " "
    TypeName@29..36
      Integer@29..36 "integer"
  Ascii44@36..37 ","
  Whitespace@37..38 " "
  ColumnDef@38..47
    DataP@38..42 "data"
    Whitespace@42..43 " "
    TypeName@43..47
      TextP@43..47 "text"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

