crates/pg_syntax/tests/snapshots/postgres_regress/tidrangescan@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ctid FROM tidrangescan WHERE ctid > '(1,4)' AND '(1,7)' >= ctid;"
---
SelectStmt@0..71
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "ctid"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeVar@17..29
    Ident@17..29 "tidrangescan"
  Whitespace@29..30 " "
  Where@30..35 "WHERE"
  Whitespace@35..36 " "
  BoolExpr@36..70
    AExpr@36..50
      ColumnRef@36..40
        Ident@36..40 "ctid"
      Whitespace@40..41 " "
      Ascii62@41..42 ">"
      Whitespace@42..43 " "
      AConst@43..50
        Sconst@43..50 "'(1,4)'"
    Whitespace@50..51 " "
    And@51..54 "AND"
    Whitespace@54..55 " "
    AExpr@55..70
      AConst@55..62
        Sconst@55..62 "'(1,7)'"
      Whitespace@62..63 " "
      GreaterEquals@63..65 ">="
      Whitespace@65..66 " "
      ColumnRef@66..70
        Ident@66..70 "ctid"
  Ascii59@70..71 ";"

