crates/pg_syntax/tests/snapshots/postgres_regress/tidscan@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ctid, * FROM tidscan\nWHERE (id = 3 AND ctid IN ('(0,2)', '(0,3)')) OR (ctid = '(0,1)' AND id = 1);"
---
SelectStmt@0..105
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "ctid"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..14
    ColumnRef@13..14
      AStar@13..14
        Ascii42@13..14 "*"
  Whitespace@14..15 " "
  From@15..19 "FROM"
  Whitespace@19..20 " "
  RangeVar@20..27
    Ident@20..27 "tidscan"
  Newline@27..28 "\n"
  Where@28..33 "WHERE"
  Whitespace@33..34 " "
  Ascii40@34..35 "("
  BoolExpr@35..103
    BoolExpr@35..71
      AExpr@35..41
        ColumnRef@35..37
          Ident@35..37 "id"
        Whitespace@37..38 " "
        Ascii61@38..39 "="
        Whitespace@39..40 " "
        AConst@40..41
          Iconst@40..41 "3"
      Whitespace@41..42 " "
      And@42..45 "AND"
      Whitespace@45..46 " "
      AExpr@46..71
        ColumnRef@46..50
          Ident@46..50 "ctid"
        Whitespace@50..51 " "
        InP@51..53 "IN"
        Whitespace@53..54 " "
        Ascii40@54..55 "("
        List@55..71
          AConst@55..62
            Sconst@55..62 "'(0,2)'"
          Ascii44@62..63 ","
          Whitespace@63..64 " "
          AConst@64..71
            Sconst@64..71 "'(0,3)'"
    Ascii41@71..72 ")"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    Or@74..76 "OR"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    BoolExpr@78..103
      AExpr@78..92
        ColumnRef@78..82
          Ident@78..82 "ctid"
        Whitespace@82..83 " "
        Ascii61@83..84 "="
        Whitespace@84..85 " "
        AConst@85..92
          Sconst@85..92 "'(0,1)'"
      Whitespace@92..93 " "
      And@93..96 "AND"
      Whitespace@96..97 " "
      AExpr@97..103
        ColumnRef@97..99
          Ident@97..99 "id"
        Whitespace@99..100 " "
        Ascii61@100..101 "="
        Whitespace@101..102 " "
        AConst@102..103
          Iconst@102..103 "1"
  Ascii41@103..104 ")"
  Ascii59@104..105 ";"

