crates/pg_syntax/tests/snapshots/postgres_regress/tidscan@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.ctid, t1.*, t2.ctid, t2.*\nFROM tidscan t1 JOIN tidscan t2 ON t1.ctid = t2.ctid WHERE t1.id = 1;"
---
SelectStmt@0..105
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..14 "ctid"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..20
    ColumnRef@16..20
      Ident@16..18 "t1"
      Ascii46@18..19 "."
      AStar@19..20
        Ascii42@19..20 "*"
  Ascii44@20..21 ","
  Whitespace@21..22 " "
  ResTarget@22..29
    ColumnRef@22..29
      Ident@22..24 "t2"
      Ascii46@24..25 "."
      Ident@25..29 "ctid"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..35
    ColumnRef@31..35
      Ident@31..33 "t2"
      Ascii46@33..34 "."
      AStar@34..35
        Ascii42@34..35 "*"
  Newline@35..36 "\n"
  From@36..40 "FROM"
  Whitespace@40..41 " "
  JoinExpr@41..88
    RangeVar@41..51
      Ident@41..48 "tidscan"
      Whitespace@48..49 " "
      Alias@49..51
        Ident@49..51 "t1"
    Whitespace@51..52 " "
    Join@52..56 "JOIN"
    Whitespace@56..57 " "
    RangeVar@57..67
      Ident@57..64 "tidscan"
      Whitespace@64..65 " "
      Alias@65..67
        Ident@65..67 "t2"
    Whitespace@67..68 " "
    On@68..70 "ON"
    Whitespace@70..71 " "
    AExpr@71..88
      ColumnRef@71..78
        Ident@71..73 "t1"
        Ascii46@73..74 "."
        Ident@74..78 "ctid"
      Whitespace@78..79 " "
      Ascii61@79..80 "="
      Whitespace@80..81 " "
      ColumnRef@81..88
        Ident@81..83 "t2"
        Ascii46@83..84 "."
        Ident@84..88 "ctid"
  Whitespace@88..89 " "
  Where@89..94 "WHERE"
  Whitespace@94..95 " "
  AExpr@95..104
    ColumnRef@95..100
      Ident@95..97 "t1"
      Ascii46@97..98 "."
      Ident@98..100 "id"
    Whitespace@100..101 " "
    Ascii61@101..102 "="
    Whitespace@102..103 " "
    AConst@103..104
      Iconst@103..104 "1"
  Ascii59@104..105 ";"

